<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="model"
        android:title="@string/pref_model_title"
        android:summary="@string/pref_model_summary"
        android:dialogTitle="@string/pref_model_dialog_title"
        android:defaultValue="standart"
        android:entries="@array/pref_model_entries"
        android:entryValues="@array/pref_model_values" />

    <ListPreference
        android:key="theme"
        android:title="@string/pref_theme_title"
        android:summary="@string/pref_theme_summary"
        android:dialogTitle="@string/pref_theme_dialog_title"
        android:defaultValue="light"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values" />

    <ListPreference
        android:key="sort"
        android:title="@string/pref_sort_title"
        android:summary="@string/pref_sort_summary"
        android:dialogTitle="@string/pref_sort_dialog_title"
        android:defaultValue="ascending_by_label"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values" />

    <SwitchPreference
        android:key="was_started"
        android:title="@string/pref_show_welcome_page_title"
        android:summary="@string/pref_show_welcome_page_summary"
        android:defaultValue="true" />

</PreferenceScreen>