<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_group_navigation">
        <menu>
            <item
                android:id="@+id/action_grid"
                android:icon="@drawable/ic_action_grid"
                android:title="@string/action_grid" />
            <item
                android:id="@+id/action_list"
                android:icon="@drawable/ic_action_list"
                android:title="@string/action_list" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings" />

</menu>
